# testlookup-client

./: .gitignore  CLAUDE.md  notes.md  run-python-tests.ps1  run-tests.ps1
.claude/: settings.local.json
pytest_allure/: conftest.py  pytest.ini  testlookup.properties
pytest_allure/tests/: allure_steps.py  case_plan.py  regression_case.py  test_parallel_regression.py  test_sequential_regression.py
pytest_realistic/: pytest.ini  testlookup.properties
pytest_realistic/tests/: test_parallel_suites_one_api_key.py  test_single_suite_hundred_cases.py  test_volume_1000.py  volume_summary.py
pytest_smoke/: pytest.ini  testlookup.properties
pytest_smoke/tests/: test_auth.py  test_smoke.py
testlookup-java-sdk/java/: pom.xml
testlookup-java-sdk/java/examples/: E2EValidation.java
testlookup-java-sdk/java/src/main/java/io/testlookup/: ConfigLoader.java  TestLookupReporter.java
testlookup-python-sdk/: README.md  pyproject.toml  testlookup_reporter.py
testng_allure/: pom.xml
testng_allure/src/test/java/com/example/allure/: CasePlan.java  (+5 more)
testng_realistic/: README.md  pom.xml
testng_realistic/src/test/java/com/example/: ParallelSuitesWithOneApiKeyTest.java  SingleSuiteHundredCasesTest.java  Volume1000WithFailuresAndSkipsTest.java  Volume100With10FailuresTest.java  Volume500AllPassedTest.java  VolumeSummary.java
testng_realistic/src/test/resources/: testlookup.properties  testng.xml
testng_smoke/: README.md  pom.xml
testng_smoke/src/test/java/com/example/: AuthTests.java  SmokeTests.java
testng_smoke/src/test/resources/: testlookup.properties  testng.xml
(+4 files in other folders)
